# 42-gomoku

./: Cargo.toml  README.md
src/: bitboard.rs  board.rs  computer.rs  constants.rs  draw.rs  game.rs  heuristic.rs  lib.rs  macros.rs  main.rs  options.rs  pattern.rs  patterns.rs  player.rs  rock.rs  rules.rs  transpose.rs
tests/: board.rs  computer.rs  heuristic.rs
tools/transpose/: Cargo.toml  README.md
tools/transpose/src/: anti_diagonal.rs  capture.rs  diagonal.rs  horizontal.rs  main.rs  vertical.rs
