[package]
name = "gomoku"
default-run = "gomoku"
version = "0.1.0"
edition = "2021"

[features]
cli_ava = []

[[bin]]
name = "gomoku"

[[bin]]
name = "transpose"
path = "./tools/transpose/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.0"
colored = "2.0.0"
fixed-vec-deque = "0.1.9"
lazy_static = "1.4.0"
macroquad = "0.3.16"
